<resources>
    <string name="app_name">E-Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filters">Filters:</string>
    <string name="filter">Filter</string>
    <string name="old_to_new">Old to new</string>
    <string name="new_to_old">New to old</string>
    <string name="price_height_to_low">Price height to low</string>
    <string name="price_low_to_high">Price low to High</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">Price:</string>
    <string name="select_filter">Select Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="item_not_found">Item Not Found</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="complete">Complete</string>
    <string name="favorites_are_empty">Favorites are empty</string>
    <string name="something_went_wrong">Something went wrong when products are fetching</string>
</resources>