<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.home.ui.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extrabold"
            android:padding="16sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </FrameLayout>


    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:imeOptions="actionSend"
        android:padding="12dp"
        android:singleLine="true"
        android:textColor="@color/black_50"
        android:textColorHint="@color/black_50"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/filters"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:cardBackgroundColor="@color/grey_2"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:paddingHorizontal="36dp"
                android:paddingVertical="10dp"
                android:text="@string/select_filter"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:visibility="visible"
            tools:visibility="gone"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/shimmer_product" />

                <include layout="@layout/shimmer_product" />


            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="6dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_product" />

        <TextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:padding="64dp"
            android:text="@string/item_not_found"
            android:layout_height="wrap_content"/>

    </FrameLayout>


</LinearLayout>